--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity
             android:name="com.jzlg.excellentwifi.activity.MainActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -55,13 +56,29 @@
             </intent-filter>
         </activity>
         <!-- 注册LookWifiActivity -->
-        <activity android:name="com.jzlg.excellentwifi.activity.LookWifiActivity" >
+        <activity
+            android:name="com.jzlg.excellentwifi.activity.LookWifiActivity"
+            android:screenOrientation="portrait" >
         </activity>
         <!-- 注册MapActivity -->
-        <activity android:name="com.jzlg.excellentwifi.activity.MapActivity" >
+        <activity
+            android:name="com.jzlg.excellentwifi.activity.MapActivity"
+            android:screenOrientation="portrait" >
         </activity>
         <!-- 注册GuideActivity -->
-        <activity android:name="com.jzlg.excellentwifi.activity.GuideActivity" >
+        <activity
+            android:name="com.jzlg.excellentwifi.activity.GuideActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <!-- 注册ChartActivity -->
+        <activity
+            android:name="com.jzlg.excellentwifi.activity.ChartActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <!-- 注册WifiLocation -->
+        <activity
+            android:name="com.jzlg.excellentwifi.activity.WifiLocation"
+            android:screenOrientation="portrait" >
         </activity>
 
         <!-- 定位服务 -->
